--- a/packages/client/src/CSS/home.css
+++ b/packages/client/src/CSS/home.css
@@ -15,6 +15,7 @@
   flex: 1; 
   padding: 20px;
   max-width: 1200px;
+  overflow:auto;
   margin: 0 auto; 
   width: 100%;
   height: 100vh;
@@ -226,3 +227,15 @@
   border-radius: 8px;
   margin-top: 20px;
 }
+
+.graph-section {
+  grid-template-columns: 1/-1;
+}
+
+.graph {
+  width: 100%;
+}
+
+/* .graph-div {
+  padding-bottom: 20px;
+} */
