--- a/packages/client/src/layouts/Layout.css
+++ b/packages/client/src/layouts/Layout.css
@@ -14,6 +14,7 @@
   display: grid;
   grid-template-columns: 1fr; /* Single column layout */
   flex-direction: column;
+  padding-bottom: 90px;
   /* gap: 20px; Space between rows */
 }
 
