--- a/packages/client/src/CSS/home.css
+++ b/packages/client/src/CSS/home.css
@@ -43,7 +43,7 @@
   width: 80%;
   height: 100vh;
   display: grid; 
-  gap: 30px; 
+  gap: 20px; 
   grid-template-areas: var(--gridLayout); 
   grid-template-columns: 1fr 1fr; 
 
@@ -125,16 +125,13 @@
   font-size: 1.6em;
   color: #2c3e50;
   margin-top: 0;
-  margin-bottom: 20px;
   border-bottom: 2px solid #f44336;
-  padding-bottom: 10px;
   display: inline-block;
 }
 
 .info-item {
   display: flex;
   align-items: center;
-  margin-bottom: 15px;
   gap: 10px;
   font-size: 1.1em;
 }
@@ -249,6 +246,7 @@
   border: 1px solid #e0e0e0;
   border-radius: 8px;
   margin-top: 20px;
+  min-width: 90%;
 }
 
 .graph-section {
