--- a/packages/client/src/CSS/evaluations.css
+++ b/packages/client/src/CSS/evaluations.css
@@ -129,7 +129,7 @@
 .student-select-table {
   width: 100%;
   border-collapse: collapse;
-  text-align: left;
+  text-align: center;
 }
 
 .student-select-table th,
