--- a/packages/client/src/components/Modals.css
+++ b/packages/client/src/components/Modals.css
@@ -148,6 +148,7 @@
 /* EVALUATIONS PAGE */
 .modal-overlay-evaluations {
   display: flex;
+  flex-direction: column;
   position: fixed;
   z-index: 1000;
   left: 0;
@@ -159,6 +160,7 @@
   align-items: center;
   justify-content: center;
   padding: 20px;
+
 }
 
 .modal-content-evaluations {
@@ -170,6 +172,7 @@
   animation: fadeIn 0.3s;
   width: 100%;
   max-width: 650px;
+  height: 55%;
 }
 
 #pre-eval-modal .modal-content-evaluations h2,
@@ -201,9 +204,12 @@
   align-items: center;
   gap: 15px;
   flex-wrap: wrap;
-  margin-top: 30px;
-  padding-top: 20px;
+  
   border-top: 1px solid #e0e0e0;
+  padding: 15px;
+  position: absolute;
+  bottom: 10px;
+  right: 5%;
 }
 /* end of evaluations */
 
