--- a/packages/client/src/CSS/home.css
+++ b/packages/client/src/CSS/home.css
@@ -131,6 +131,7 @@
   margin-top: 0;
   border-bottom: 2px solid #f44336;
   display: inline-block;
+  max-height: 200px;
 }
 
 .info-item {
@@ -182,6 +183,7 @@
   grid-area: stats; /* Added grid area */
   display: flex;
   flex-direction: column;
+  max-height: 300px;
 }
 
 .user-stats-section h2 {
@@ -192,6 +194,7 @@
   border-bottom: 2px solid #f44336;
   padding-bottom: 10px;
   display: inline-block;
+  
 }
 
 .user-stats {
@@ -205,20 +208,19 @@
 }
 
 .home-stats {
-  font-size: 25px;
+  font-size: 18px;
 }
 
 .stat {
   background: #f9f9f9;
   border: 1px solid #eee; 
-  padding: 25px 20px; 
   border-radius: 10px;
-  min-width: 150px; 
+  min-width: 50px; 
   text-align: center;
   box-shadow: 0 2px 6px rgba(0,0,0,0.08); 
   transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
   flex: 1; 
-  min-height: 100px; 
+  min-height: 50px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -281,6 +283,7 @@
   border-radius: 10px;
   box-shadow: 0 2px 6px rgba(0,0,0,0.08);
   border: 1px solid #eee;
+  max-height: 320px;
 }
 
 .graph-section h2 {
@@ -296,11 +299,12 @@
 .graph-div {
   width: 100%;
   height: 300px; /* Set a fixed height for the graph container */
+  margin-bottom:20px;
 }
 
 .graph {
   width: 100%;
-  height: 100%;
+  height: 87%;
 }
 
 #tooltip {
