if a user has a decently long name, it will show up weirdly in profile.

--- a/packages/client/src/components/ButtonAndCard.css
+++ b/packages/client/src/components/ButtonAndCard.css
@@ -488,6 +488,8 @@ CARDS
 .profile-card:hover {
   transform: translateY(-5px);
   box-shadow: 0 6px 15px rgba(0, 0, 0, 0.12);
+  text-overflow: ellipsis;
+  overflow:auto;
 }
 
 .profile-card {
