--- a/packages/client/src/CSS/FilterEvaluations.css
+++ b/packages/client/src/CSS/FilterEvaluations.css
@@ -1,20 +1,17 @@
 .filter-evals-container {
-  /* grid-area: profile; */
   width: 95vw;
   height: 60vh;
   background: #ffffff;
   border-radius: 12px;
   box-shadow: 0 4px 12px rgba(0,0,0,0.08);
   padding: 25px;
-  margin-top: 5%; /* Slight offset for visual balance */
-  display: flex; /* Use flex to push the button to the bottom */
+  margin-top: 5%;
+  display: flex;
   flex-direction: column;
 }
 
 .filter-evals-button {
-  /* display: block; */
   font-size: 20px;
-  /* margin-top: 20px; */
   background-color: red;
   color: white;
 }
@@ -34,7 +31,6 @@
   width: 100%;
   border-collapse: collapse;
   margin-bottom: 1.5rem;
-  /* height: 80vh; */
 }
 
 .eval-select-table th,
