--- a/packages/client/src/layouts/Layout.css
+++ b/packages/client/src/layouts/Layout.css
@@ -1,27 +1,19 @@
 .main-content-area {
-  /*
-    Ensures that on pages with little content, the main area still takes up
-    the full height of the screen, keeping the footer at the very bottom.
-  */
-  /* min-height: 80vh; */
   height: 83vh;
 
-  /* Includes padding in the element's total width and height calculation. */
   box-sizing: border-box;
   flex: 1;
   background-color: #f0f2f5;
   overflow-y: hidden;
   overflow-x: hidden;
   display: grid;
-  grid-template-columns: 1fr; /* Single column layout */
+  grid-template-columns: 1fr;
   flex-direction: column;
   padding-bottom: 90px;
   display: block;
-  /* gap: 20px; Space between rows */
 }
 
 .layout-container {
-  /* display: flex; */
   flex-direction: column;
   height: 100%;
 }
@@ -31,8 +23,4 @@ footer {
   flex-shrink: 0;
   height: 10vh;
   display: block;
-}
-
-header {
-  /* margin-bottom: 90px; */
 }
