--- a/packages/client/src/components/Modals.css
+++ b/packages/client/src/components/Modals.css
@@ -200,7 +200,7 @@
   
   border-top: 1px solid #e0e0e0;
   padding: 15px;
-  position: absolute;
+  /* position: absolute; */
   bottom: 10px;
   right: 5%;
 }
@@ -219,6 +219,7 @@
  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
  height: fit-content;
  width: 20vw;
+ margin: auto;
 }
 
 .submit-signup-login-group {
