--- a/packages/client/src/pages/PastEvaluations.css
+++ b/packages/client/src/pages/PastEvaluations.css
@@ -47,21 +47,6 @@ html, body, #root {
  margin-bottom: 10px; */
 }
 
-.dropdown {
- padding: 6px 30px 6px 12px;
- min-width: 140px;
- font-size: 16px;
- border: 1px solid #999;
- border-radius: 6px;
- background-color: #f9f9f9;
- background-image: url("data:image/svg+xml;charset=UTF-8,%3Csvg viewBox='0 0 140 140' xmlns='http://www.w3.org/2000/svg'%3E%3Cpolygon fill='%23666' points='70,100 20,40 120,40'/%3E%3C/svg%3E");
- background-repeat: no-repeat;
- background-position: right 10px center;
- background-size: 10px;
- appearance: none;
- transition: all 0.2s ease-in-out;
-}
-
 .dropdown:focus {
  outline: none;
  border-color: #555;
@@ -74,6 +59,22 @@ html, body, #root {
  display: flex;
  justify-content: center;
  margin-top: 40px;
+}
+
+.dropdown-eval {
+ padding: 6px 30px 6px 12px;
+ min-width: 140px;
+ font-size: 16px;
+ border: 1px solid #999;
+ border-radius: 6px;
+ background-color: #f9f9f9;
+ background-image: url("data:image/svg+xml;charset=UTF-8,%3Csvg viewBox='0 0 140 140' xmlns='http://www.w3.org/2000/svg'%3E%3Cpolygon fill='%23666' points='70,100 20,40 120,40'/%3E%3C/svg%3E");
+ background-repeat: no-repeat;
+ background-position: right 10px center;
+ background-size: 10px;
+ appearance: none;
+ transition: all 0.2s ease-in-out;
+ height: 50%;
 }
 
 .eval-form {
