--- a/packages/client/src/components/Modals.css
+++ b/packages/client/src/components/Modals.css
@@ -206,8 +206,14 @@
 }
 
 #evaluation-modal .modal-content-evaluations {
-  max-width: 1200px;
+  min-width: 98.2vw;
+  min-height: 99vh;
   text-align: left;
+  padding: 20px;
+  margin: 0;
+  left: -5px;
+  top: -5px;
+  position: absolute;
 }
 
 .modal-footer-evaluations {
