--- a/packages/client/src/CSS/evaluations.css
+++ b/packages/client/src/CSS/evaluations.css
@@ -137,6 +137,7 @@
 .student-select-table td {
   padding: 14px 16px;
   border-bottom: 1px solid #e0e0e0;
+  max-width: 100px;
   vertical-align: middle;
   overflow: hidden;
   white-space: nowrap;
